--- a/scenes.yaml
+++ b/scenes.yaml
@@ -1,255 +1,370 @@
-- id: '1611485358238'
-  name: Lezen op de bank
+- id: '1670145489984'
+  name: SCE001 Winter werkdag
   entities:
-    light.085484012462ab4be30b:
+    light.kerstboom_light:
+      supported_color_modes:
+      - brightness
+      off_with_transition: false
+      off_brightness:
+      friendly_name: Kerstboom Light
+      supported_features: 40
+      color_mode: xy
+      brightness: 61
+      hs_color:
+      - 225.176
+      - 100
+      rgb_color:
+      - 0
+      - 63
+      - 255
+      xy_color:
+      - 0
+      - 0
+      state: 'on'
+    light.led_bank_level_light_color_on_off:
+      min_color_temp_kelvin: 2000
+      max_color_temp_kelvin: 6535
       min_mireds: 153
-      max_mireds: 370
+      max_mireds: 500
+      effect_list:
+      - colorloop
+      supported_color_modes:
+      - color_temp
+      - xy
+      color_mode: xy
+      brightness: 207
+      hs_color:
+      - 44.722
+      - 84.706
+      rgb_color:
+      - 255
+      - 200
+      - 39
+      xy_color:
+      - 0.507988
+      - 0.450996
+      off_with_transition: false
+      off_brightness:
+      friendly_name: LED-Bank level, light_color, on_off
+      supported_features: 44
+      state: 'on'
+    light.ikea_of_sweden_tradfri_bulb_gu10_cws_345lm_1339b7fe_level_light_color_on_off:
+      min_color_temp_kelvin: 2202
+      max_color_temp_kelvin: 4000
+      min_mireds: 250
+      max_mireds: 454
+      effect_list:
+      - colorloop
+      supported_color_modes:
+      - color_temp
+      - xy
+      off_with_transition: false
+      off_brightness:
+      friendly_name: backlight
+      supported_features: 44
+      color_mode: color_temp
+      brightness: 107
+      color_temp_kelvin: 2624
+      color_temp: 381
+      hs_color:
+      - 28.567
+      - 68.208
+      rgb_color:
+      - 255
+      - 163
+      - 81
+      xy_color:
+      - 0.534
+      - 0.387
+      state: 'on'
+    light.computerlamp:
+      min_color_temp_kelvin: 2000
+      max_color_temp_kelvin: 6535
+      min_mireds: 153
+      max_mireds: 500
+      supported_color_modes:
+      - brightness
+      - color_temp
+      - hs
+      friendly_name: Computerlamp
+      supported_features: 0
+      color_mode: color_temp
       brightness: 255
-      color_temp: 56
-      friendly_name: BankLamp
-      supported_features: 3
+      color_temp_kelvin: 4926
+      color_temp: 203
+      hs_color:
+      - 26.931
+      - 20.257
+      rgb_color:
+      - 255
+      - 226
+      - 203
+      xy_color:
+      - 0.375
+      - 0.35
       state: 'on'
-  icon: mdi:book-open
-- id: '1618267847533'
-  name: TV Kijken
+    climate.airco_woonkamer:
+      hvac_modes:
+      - 'off'
+      - heat
+      - dry
+      - cool
+      - fan_only
+      - heat_cool
+      min_temp: 16
+      max_temp: 30
+      target_temp_step: 0.5
+      fan_modes:
+      - LOW
+      - LOW_MID
+      - MID
+      - MID_HIGH
+      - HIGH
+      - NATURE
+      swing_modes:
+      - VerticalOff
+      - VerticalTop
+      - VerticalMiddleTop1
+      - VerticalMiddleTop2
+      - VerticalMiddleBottom2
+      - VerticalMiddleBottom1
+      - VerticalBottom
+      - VerticalSwing
+      - VerticalOff
+      - HorizontalOff
+      - HorizontalLeft
+      - HorizontalMiddleLeft
+      - HorizontalCenter
+      - HorizontalMiddleRight
+      - HorizontalRight
+      - HorizontalLeftHalf
+      - HorizontalRightHalf
+      - HorizontalSwing
+      current_temperature: 23.5
+      temperature: 30
+      fan_mode: HIGH
+      swing_mode: VerticalTop
+      swing_mode_horizontal: HorizontalMiddleRight
+      swing_mode_vertical: VerticalTop
+      friendly_name: Airco Woonkamer
+      supported_features: 41
+      state: heat
+    switch.airco_woonkamer_jet_mode:
+      device_class: switch
+      icon: mdi:turbine
+      friendly_name: Airco Woonkamer Jet mode
+      state: 'off'
+    switch.airco_woonkamer_display_light:
+      device_class: switch
+      icon: mdi:wall-sconce-round
+      friendly_name: Airco Woonkamer Display light
+      state: 'off'
+    cover.rollerblind_0001:
+      current_position: 40
+      device_class: shade
+      friendly_name: RollerBlind 0001
+      supported_features: 15
+      state: open
+    cover.rollerblind_0002:
+      current_position: 40
+      device_class: shade
+      friendly_name: RollerBlind 0002
+      supported_features: 15
+      state: open
+  icon: mdi:sun-snowflake
+  metadata: {}
+- id: '1670145624262'
+  name: SCE002 Zomer
   entities:
     light.computerlamp:
-      min_mireds: 153
-      max_mireds: 370
-      supported_color_modes:
-      - color_temp
-      friendly_name: Computerlamp
-      supported_features: 3
-      state: 'off'
-    light.tafellamp:
-      min_mireds: 153
-      max_mireds: 370
-      supported_color_modes:
-      - color_temp
-      friendly_name: Tafellamp
-      supported_features: 3
-      state: 'off'
-    light.muurlamp:
-      min_mireds: 153
-      max_mireds: 370
-      supported_color_modes:
-      - color_temp
-      - hs
-      color_mode: hs
-      brightness: 3
-      hs_color:
-      - 0
-      - 0
-      rgb_color:
-      - 255
-      - 255
-      - 255
-      xy_color:
-      - 0.323
-      - 0.329
-      color_temp: 320
-      friendly_name: Muurlamp
-      supported_features: 19
-      state: 'on'
-    light.boekenlamp:
-      min_mireds: 153
-      max_mireds: 370
-      supported_color_modes:
-      - color_temp
-      - hs
-      color_mode: hs
-      brightness: 3
-      hs_color:
-      - 0
-      - 0
-      rgb_color:
-      - 255
-      - 255
-      - 255
-      xy_color:
-      - 0.323
-      - 0.329
-      color_temp: 320
-      friendly_name: Boekenlamp
-      supported_features: 19
-      state: 'on'
-    light.tvlamp:
-      min_mireds: 153
-      max_mireds: 370
-      supported_color_modes:
-      - color_temp
-      - hs
-      color_mode: hs
-      brightness: 1
-      hs_color:
-      - 30
-      - 85
-      rgb_color:
-      - 255
-      - 146
-      - 38
-      xy_color:
-      - 0.579
-      - 0.388
-      color_temp: 320
-      friendly_name: TV lamp
-      supported_features: 19
-      state: 'on'
-    light.raamlamp:
-      min_mireds: 153
-      max_mireds: 370
-      supported_color_modes:
-      - color_temp
-      color_mode: color_temp
-      brightness: 3
-      color_temp: 320
-      friendly_name: Raamlamp
-      supported_features: 3
-      state: 'on'
-    cover.rollerblind_links:
-      current_position: 0
-      friendly_name: RollerBlind-Links
-      supported_features: 15
-      device_class: shade
-      state: closed
-    cover.rollerblind_rechts:
-      current_position: 0
-      friendly_name: RollerBlind-Rechts
-      supported_features: 15
-      device_class: shade
-      state: closed
-  icon: hass:netflix
-- id: '1635863797530'
-  name: Set Film Lights
-  entities:
-    light.computerlamp:
+      min_color_temp_kelvin: 2000
+      max_color_temp_kelvin: 6535
       min_mireds: 153
       max_mireds: 500
       supported_color_modes:
       - brightness
       - color_temp
       - hs
-      - onoff
       friendly_name: Computerlamp
       supported_features: 0
-      state: 'off'
-    light.boekenlamp:
-      min_mireds: 153
-      max_mireds: 500
-      supported_color_modes:
-      - brightness
-      - color_temp
-      - hs
-      - onoff
       color_mode: color_temp
-      brightness: 3
-      color_temp: 462
+      brightness: 255
+      color_temp_kelvin: 4926
+      color_temp: 203
       hs_color:
-      - 29.929
-      - 86.298
+      - 26.931
+      - 20.257
       rgb_color:
       - 255
-      - 144
-      - 34
+      - 226
+      - 203
       xy_color:
-      - 0.583
-      - 0.387
-      friendly_name: Boekenlamp
-      supported_features: 0
-      state: 'on'
-    light.tafellamp:
-      min_mireds: 153
-      max_mireds: 500
-      supported_color_modes:
-      - brightness
-      - color_temp
-      - hs
-      - onoff
-      friendly_name: Tafellamp
-      icon: mdi:spotlight-beam
-      supported_features: 0
-      state: 'off'
-    light.muurlamp:
-      min_mireds: 153
-      max_mireds: 500
-      supported_color_modes:
-      - brightness
-      - color_temp
-      - hs
-      - onoff
-      color_mode: color_temp
-      brightness: 3
-      color_temp: 462
-      hs_color:
-      - 29.929
-      - 86.298
-      rgb_color:
-      - 255
-      - 144
-      - 34
-      xy_color:
-      - 0.583
-      - 0.387
-      friendly_name: Muurlamp
-      supported_features: 0
-      state: 'on'
-    light.tv_lamp:
-      min_mireds: 153
-      max_mireds: 500
-      supported_color_modes:
-      - brightness
-      - color_temp
-      - hs
-      - onoff
-      friendly_name: TV lamp
-      icon: mdi:ceiling-light
-      supported_features: 0
-      state: 'off'
-    light.raamlamp:
-      min_mireds: 153
-      max_mireds: 500
-      supported_color_modes:
-      - brightness
-      - color_temp
-      - onoff
-      color_mode: color_temp
-      brightness: 3
-      color_temp: 428
-      hs_color:
-      - 29.343
-      - 78.812
-      rgb_color:
-      - 255
-      - 152
-      - 54
-      xy_color:
-      - 0.564
-      - 0.389
-      friendly_name: Raamlamp
-      supported_features: 0
+      - 0.375
+      - 0.35
       state: 'on'
     cover.rollerblind_0001:
-      current_position: 0
-      friendly_name: RollerBlind-0001
-      supported_features: 15
+      current_position: 50
       device_class: shade
-      state: closed
+      friendly_name: RollerBlind 0001
+      supported_features: 15
+      state: open
     cover.rollerblind_0002:
-      current_position: 0
-      friendly_name: RollerBlind-0002
-      supported_features: 15
+      current_position: 50
       device_class: shade
-      state: closed
-    media_player.woonkamer_thuis:
-      volume_level: 1
-      is_volume_muted: false
-      media_content_id: https://www.home-assistant.io/images/cast/splash.png
-      media_position: 0
-      media_position_updated_at: '2021-11-02T14:36:33.451539+00:00'
-      app_id: CC1AD845
-      app_name: Default Media Receiver
-      entity_picture_local:
-      friendly_name: Google TV
-      supported_features: 152451
-      state: idle
-  icon: mdi:video-vintage
+      friendly_name: RollerBlind 0002
+      supported_features: 15
+      state: open
+  icon: mdi:sun-thermometer-outline
+  metadata: {}
+- id: '1670145955311'
+  name: SEC003 TV Kijken
+  entities:
+    light.computerlamp:
+      min_color_temp_kelvin: 2000
+      max_color_temp_kelvin: 6535
+      min_mireds: 153
+      max_mireds: 500
+      supported_color_modes:
+      - brightness
+      - color_temp
+      - hs
+      friendly_name: Computerlamp
+      supported_features: 0
+      state: 'off'
+    light.led_bank_level_light_color_on_off:
+      min_color_temp_kelvin: 2000
+      max_color_temp_kelvin: 6535
+      min_mireds: 153
+      max_mireds: 500
+      effect_list:
+      - colorloop
+      supported_color_modes:
+      - color_temp
+      - xy
+      color_mode: xy
+      brightness: 191
+      hs_color:
+      - 44.722
+      - 84.706
+      rgb_color:
+      - 255
+      - 200
+      - 39
+      xy_color:
+      - 0.507988
+      - 0.450996
+      off_with_transition: false
+      off_brightness:
+      friendly_name: LED-Bank level, light_color, on_off
+      supported_features: 44
+      state: 'on'
+    light.ikea_of_sweden_tradfri_bulb_gu10_cws_345lm_1339b7fe_level_light_color_on_off:
+      min_color_temp_kelvin: 2202
+      max_color_temp_kelvin: 4000
+      min_mireds: 250
+      max_mireds: 454
+      effect_list:
+      - colorloop
+      supported_color_modes:
+      - color_temp
+      - xy
+      off_with_transition: false
+      off_brightness:
+      friendly_name: backlight
+      supported_features: 44
+      color_mode: color_temp
+      brightness: 110
+      color_temp_kelvin: 2624
+      color_temp: 381
+      hs_color:
+      - 28.567
+      - 68.208
+      rgb_color:
+      - 255
+      - 163
+      - 81
+      xy_color:
+      - 0.534
+      - 0.387
+      state: 'on'
+    light.tv_lamp:
+      min_color_temp_kelvin: 2000
+      max_color_temp_kelvin: 6535
+      min_mireds: 153
+      max_mireds: 500
+      supported_color_modes:
+      - brightness
+      - color_temp
+      - hs
+      icon: mdi:ceiling-light
+      friendly_name: TV lamp
+      supported_features: 0
+      color_mode: color_temp
+      brightness: 51
+      color_temp_kelvin: 3378
+      color_temp: 296
+      hs_color:
+      - 27.303
+      - 47.492
+      rgb_color:
+      - 255
+      - 189
+      - 133
+      xy_color:
+      - 0.464
+      - 0.377
+      state: 'on'
+    light.boekenlamp:
+      min_color_temp_kelvin: 2000
+      max_color_temp_kelvin: 6535
+      min_mireds: 153
+      max_mireds: 500
+      supported_color_modes:
+      - brightness
+      - color_temp
+      - hs
+      friendly_name: Boekenlamp
+      supported_features: 0
+      color_mode: color_temp
+      brightness: 76
+      color_temp_kelvin: 2320
+      color_temp: 431
+      hs_color:
+      - 29.393
+      - 79.466
+      rgb_color:
+      - 255
+      - 151
+      - 52
+      xy_color:
+      - 0.567
+      - 0.389
+      state: 'on'
+    light.muurlamp:
+      min_color_temp_kelvin: 2000
+      max_color_temp_kelvin: 6535
+      min_mireds: 153
+      max_mireds: 500
+      supported_color_modes:
+      - brightness
+      - color_temp
+      - hs
+      friendly_name: Muurlamp
+      supported_features: 0
+      color_mode: color_temp
+      brightness: 76
+      color_temp_kelvin: 2320
+      color_temp: 431
+      hs_color:
+      - 29.393
+      - 79.466
+      rgb_color:
+      - 255
+      - 151
+      - 52
+      xy_color:
+      - 0.567
+      - 0.389
+      state: 'on'
+  icon: mdi:television
+  metadata: {}
